--- a/content/project/internal-project-2/index.html
+++ b/content/project/internal-project-2/index.html
@@ -46,12 +46,26 @@ slides: example
 <script src="/rmarkdown-libs/viz.js/full.render.js"></script>
 
 
-<pre class="r"><code>cars &lt;- c(1, 3, 6, 1, 1, 1, 2, 3, 4, 5)
-
-# Graph the cars vector with all defaults
-plot(cars)
-
-library(bupaR)</code></pre>
+<p>Big Processes are a Big Topic in data analytics. This is particularly true in enterprises who are placing a heavy emphasis on operational efficiency and are looking to move towards a culture of continual improvement.</p>
+<p>One of the ways businesses are tackling process analysis is via techniques like “process mining”.</p>
+<p>Process mining is a a set of analytical techniques we can use to gain insights into the following types of questions:
+- Process discovery - what is really happening, understand the current process, especially where no previous odel of a process may exist
+- How often are activities performed ?
+- Who are the fastest at performing certain tasks ?
+- What is the “cycle” time ? What is the “waiting” time ?
+- How often do “handoffs” occur ?
+- … and many other questions !</p>
+<p>Tools like R provide an ideal platform for getting into a journey of process mining.</p>
+<p>There is a brilliant R library centered on process mining from the people here:</p>
+<div id="gert-janssenswillen-2020.-processmapr-construct-process-maps-using" class="section level2">
+<h2>Gert Janssenswillen (2020). processmapR: Construct Process Maps Using</h2>
+</div>
+<div id="event-data.-httpswww.bupar.net" class="section level2">
+<h2>Event Data. <a href="https://www.bupar.net" class="uri">https://www.bupar.net</a>,</h2>
+</div>
+<div id="httpsgithub.combupaverseprocessmapr." class="section level2">
+<h2><a href="https://github.com/bupaverse/processmapr" class="uri">https://github.com/bupaverse/processmapr</a>.</h2>
+<pre class="r"><code>library(bupaR)</code></pre>
 <pre><code>## 
 ## Attaching package: &#39;bupaR&#39;</code></pre>
 <pre><code>## The following object is masked from &#39;package:stats&#39;:
@@ -60,7 +74,6 @@ library(bupaR)</code></pre>
 <pre><code>## The following object is masked from &#39;package:utils&#39;:
 ## 
 ##     timestamp</code></pre>
-<p><img src="/project/internal-project-2/index_files/figure-html/unnamed-chunk-1-1.png" width="672" /></p>
 <pre class="r"><code>library(processanimateR)
 eldata &lt;- read_xes(&quot;G:/OneDrive/Documents/buparProject/data/GT_p1_t1.xes&quot;)</code></pre>
 <pre><code>## Warning: `data_frame()` is deprecated as of tibble 1.1.0.
@@ -84,3 +97,4 @@ eldata &lt;- read_xes(&quot;G:/OneDrive/Documents/buparProject/data/GT_p1_t1.xes
 nrow(eldata)</code></pre>
 <pre><code>## [1] 676</code></pre>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tellus ac convallis placerat.</p>
+</div>
