--- a/content/project/internal-project-2/index.html
+++ b/content/project/internal-project-2/index.html
@@ -83,4 +83,5 @@ eldata &lt;- read_xes(&quot;G:/OneDrive/Documents/buparProject/data/GT_p1_t1.xes
 <pre class="r"><code># eldata
 nrow(eldata)</code></pre>
 <pre><code>## [1] 676</code></pre>
+<p>test</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tellus ac convallis placerat.</p>
