--- a/content/project/internal-project-2/index.html
+++ b/content/project/internal-project-2/index.html
@@ -46,7 +46,7 @@ slides: example
 <script src="/rmarkdown-libs/viz.js/full.render.js"></script>
 
 
-<p>Big Processes are a Big Topic in data analytics. This is particularly true in enterprises who are placing a heavy emphasis on operational efficiency and are looking to instill a culture of continuous improvement.</p>
+<p>Big Processes are a Big Topic in data analytics. This is particularly true ot late in enterprises who are placing a heavy emphasis on operational efficiency and are looking to instill a culture of continuous improvement.</p>
 <p>“Process mining” is a set of analytical techniques we can use to gain insights into the following types of questions:</p>
 <ul>
 <li>Process discovery
