--- a/content/project/internal-project-3/index.html
+++ b/content/project/internal-project-3/index.html
@@ -68,4 +68,4 @@ slides: example
   filter(objectTypeDesc == &#39;Settlement&#39;) %&gt;%
   trace_explorer(coverage = 0.5)</code></pre>
 <p><img src="/project/internal-project-3/index_files/figure-html/process_map_traces1-1.png" width="672" /></p>
-<p>Thanks for reading !</p>
+<p>Thank you for reading !</p>
